# coolblue-assignment

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
src/: benchmark.rs  domain.rs  main.rs  optimizer.rs  parser.rs
src/optimizer/: mod.rs  score.rs  state.rs
